--- a/optart/optart.ipynb
+++ b/optart/optart.ipynb
@@ -5,9 +5,11 @@
    "id": "6a4f734a",
    "metadata": {},
    "source": [
-    "# OptArt\n",
+    "# OptArt3\n",
     "\n",
-    "An example from the book [Opt Art by Robert Bosch](https://www.amazon.com/Opt-Art-Mathematical-Optimization-Visual/dp/0691164061) (chapter 3)."
+    "An example from the book [Opt Art by Robert Bosch](https://www.amazon.com/Opt-Art-Mathematical-Optimization-Visual/dp/0691164061) (chapter 3): optimizing lego builds.\n",
+    "\n",
+    "We use a linear programming package in Python."
    ]
   },
   {
@@ -346,6 +348,90 @@
     "This is the graphical representation of the problem with the solution in red.\n",
     "\n",
     "![Graph](graph.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a49bf07",
+   "metadata": {},
+   "source": [
+    "## Non-integer\n",
+    "\n",
+    "Just out of curiosity, how does this change if we drop the requirenebt that `chairs` and `tables` and integer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "55fea5fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\* OptArt3 *\\\n",
+      "Maximize\n",
+      "Earnings: 8 chairs + 11 tables\n",
+      "Subject To\n",
+      "Stock_of_large_bricks: chairs + 2 tables <= 19\n",
+      "Stock_of_small_bricks: 2 chairs + 2 tables <= 25\n",
+      "End\n"
+     ]
+    }
+   ],
+   "source": [
+    "chairs3 = pulp.LpVariable('chairs',lowBound = 0, cat='Continuous')\n",
+    "tables3 = pulp.LpVariable('tables',lowBound = 0, cat='Continuous')\n",
+    "\n",
+    "prob3 = pulp.LpProblem(\"OptArt3\",pulp.LpMaximize)\n",
+    "prob3 += 8*chairs3 + 11*tables3, \"Earnings\"\n",
+    "prob3 += 2*chairs3 + 2*tables3 <= 25, \"Stock of small bricks\"\n",
+    "prob3 += 1*chairs3 + 2*tables3 <= 19, \"Stock of large bricks\"\n",
+    "\n",
+    "prob3.writeLP(\"optart3.lp\")\n",
+    "!type optart3.lp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc244e7c",
+   "metadata": {},
+   "source": [
+    "I am a bit surprised that the `Bounds` section with `0 <= chairs3` and ` 0 <= tables3` is not part of the lp file.\n",
+    "Somehow the `Generals` means that `chairs` and `tables` is integer. Hmm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8002ed89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chairs=6.0\n",
+      "tables=6.5\n",
+      "119.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat = prob3.solve()\n",
+    "pulp.LpStatus[stat]\n",
+    "for v in prob3.variables() : \n",
+    "    print( f\"{v.name}={v.varValue}\" )\n",
+    "print( pulp.value(prob3.objective) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f21ccd07",
+   "metadata": {},
+   "source": [
+    "We now indeed find the non-integer solution indicated in gray in the image in the previous section."
    ]
   },
   {
