--- a/optart/optart.ipynb
+++ b/optart/optart.ipynb
@@ -357,7 +357,7 @@
    "source": [
     "## Non-integer\n",
     "\n",
-    "Just out of curiosity, how does this change if we drop the requirenebt that `chairs` and `tables` and integer?"
+    "Just out of curiosity, how does this change if we drop the requirement that `chairs` and `tables` are integer?"
    ]
   },
   {
@@ -398,8 +398,8 @@
    "id": "fc244e7c",
    "metadata": {},
    "source": [
-    "I am a bit surprised that the `Bounds` section with `0 <= chairs3` and ` 0 <= tables3` is not part of the lp file.\n",
-    "Somehow the `Generals` means that `chairs` and `tables` is integer. Hmm."
+    "I am a bit surprised that the `Bounds` section with `0 <= chairs3` and ` 0 <= tables3` is no longer part of the lp file.\n",
+    "Secondly, somehow the `Generals` section implies that `chairs` and `tables` is integer. Hmm."
    ]
   },
   {
