--- a/linassign/LinAssign.ipynb
+++ b/linassign/LinAssign.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Linear Assignment\n",
     "\n",
-    "This section replicates the example from chapter 4 of the book Opt Art by Robert Bosch."
+    "This section replicates the example from chapter 4 of the book\n",
+    "[Opt Art by Robert Bosch](https://www.amazon.com/Opt-Art-Mathematical-Optimization-Visual/dp/0691164061)."
    ]
   },
   {
@@ -22,7 +23,9 @@
     "- There are 5 professors.\n",
     "- There are 5 courses.\n",
     "- Professors will complain when they need to give a course, but the amount of complaining differs. This is the cost table.\n",
-    "- Find an assignment with minimal cost."
+    "- Find an assignment with minimal cost.\n",
+    "\n",
+    "This class of problems is known as _linear assignment_."
    ]
   },
   {
@@ -97,13 +100,13 @@
    "source": [
     "profs = [ 'profA', 'profB', 'profC', 'profD', 'profE' ]\n",
     "courses = [ 'course1', 'course2', 'course3', 'course4', 'course5' ]\n",
-    "combos = [ (p,c) for p in profs for c in courses]\n",
+    "combos = [ (p,c) for p in profs for c in courses ]\n",
     "combos"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a00a34da",
+   "id": "3bb0b26a",
    "metadata": {},
    "source": [
     "We also have a table of costs."
@@ -223,7 +226,7 @@
    "id": "f0b0b096",
    "metadata": {},
    "source": [
-    "The objective function is the cost associated with the asignment."
+    "Thirdly, the objective function is the cost associated with the asignment."
    ]
   },
   {
@@ -260,7 +263,7 @@
    "id": "0ee3d34d",
    "metadata": {},
    "source": [
-    "Likewise, each course can only be assigned to one professor."
+    "Finally, each course can only be assigned to one professor."
    ]
   },
   {
@@ -279,7 +282,7 @@
    "id": "ed0e3285",
    "metadata": {},
    "source": [
-    "And we are done. Let's save problem."
+    "And we are done. Let's save the problem."
    ]
   },
   {
@@ -415,7 +418,7 @@
    "id": "dbb9b022",
    "metadata": {},
    "source": [
-    "We solve it, and check the status if that was successful."
+    "We solve it, and check the status for success."
    ]
   },
   {
@@ -445,12 +448,12 @@
    "id": "320663ce",
    "metadata": {},
    "source": [
-    "The cost of this assignment is now also available."
+    "The cost of this assignment is now also computable. Note that `pulp.value(E)` computes the value of expression `E`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "06beca6a",
    "metadata": {},
    "outputs": [
@@ -460,7 +463,7 @@
        "11.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,12 +477,12 @@
    "id": "0860c62f",
    "metadata": {},
    "source": [
-    "I was a bit puzzled on the data structures. The `assign` object is a dictionary. Its _keys_ are passed when creating `assign`, in our case those come from `combos`. In `combos` we have two-tuples of strings like `('profA', 'course1')`. So one of the keys of `assign` is `('profA', 'course1')` and we can extract the parts with `key[0]` (giving `'profA'`) and `key[1]` (giving `'course1'`). Here are all the keys."
+    "I was a bit puzzled on the data structures. The `assign` object is a dictionary. Its _keys_ are passed when creating `assign`, in our case those come from `combos`. In `combos` we have two-tuples of strings like `('profA', 'course1')`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "a3bc396e",
    "metadata": {},
    "outputs": [
@@ -518,6 +521,14 @@
    "source": [
     "for k in assign.keys() :\n",
     "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec88de54",
+   "metadata": {},
+   "source": [
+    "So one of the keys of `assign` is `('profA', 'course1')` and we can extract the parts with `key[0]` (giving `'profA'`) and `key[1]` (giving `'course1'`). Here are all the keys."
    ]
   },
   {
@@ -648,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "3368ff4c",
    "metadata": {},
    "outputs": [
@@ -668,6 +679,14 @@
     "for key,var in assign.items():\n",
     "    if var.value() :\n",
     "        print( f\"{key[0]} - {key[1]} - {costs[(key)]}\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adfdeeba",
+   "metadata": {},
+   "source": [
+    "Indeed, the cost of this is 11 (2.5+1.5+2.0+3.5+1.5)."
    ]
   },
   {
