adds name, cost

--- a/linassign/LinAssign.ipynb
+++ b/linassign/LinAssign.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Problem formulation\n",
     "\n",
-    "We will use pulp again."
+    "We will use [PuLP](https://pypi.org/project/PuLP/) (a linear programming modeler written in python)."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "We have now all ingredients to formalize the problem.\n",
     "\n",
-    "First, we create the problem object. We want to minimize cost."
+    "First, we create the problem _object_. We want to minimize cost."
    ]
   },
   {
@@ -208,7 +208,9 @@
    "metadata": {},
    "source": [
     "Next, we create the variables. They indicate which professor is assigned to which course. All variables must be 0 or 1. \n",
-    "\"Researchers have proved that in case of the linear assignment problem, every vertex of the feasible region is integer valued.\""
+    "Quoting Robert Bosch: \n",
+    "\n",
+    "> \"Researchers have proved that in case of the linear assignment problem, every vertex of the continuous relaxation feasible region is integer valued.\""
    ]
   },
   {
@@ -226,7 +228,7 @@
    "id": "f0b0b096",
    "metadata": {},
    "source": [
-    "Thirdly, the objective function is the cost associated with the asignment."
+    "Thirdly, the objective function is the cost associated with the assignment."
    ]
   },
   {
@@ -282,7 +284,7 @@
    "id": "ed0e3285",
    "metadata": {},
    "source": [
-    "And we are done. Let's save the problem."
+    "And we are done. Let's save and view the problem definition."
    ]
   },
   {
@@ -389,7 +391,7 @@
    "id": "ed4b3005",
    "metadata": {},
    "source": [
-    "At this moment the problem is not yet solved."
+    "At this moment the `prop` problem is not yet solved."
    ]
   },
   {
@@ -448,12 +450,30 @@
    "id": "320663ce",
    "metadata": {},
    "source": [
-    "The cost of this assignment is now also computable. Note that `pulp.value(E)` computes the value of expression `E`."
+    "The cost of the optimal assignment is now also computable. Note that `pulp.value(E)` computes the value of expression `E`. The `prob.objective` is indeed an expression computing the cost."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
+   "id": "712ae5cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5*assign_('profA',_'course1') + 3.5*assign_('profA',_'course2') + 4.0*assign_('profA',_'course3') + 4.0*assign_('profA',_'course4') + 3.5*assign_('profA',_'course5') + 2.5*assign_('profB',_'course1') + 1.5*assign_('profB',_'course2') + 2.5*assign_('profB',_'course3') + 1.5*assign_('profB',_'course4') + 4.0*assign_('profB',_'course5') + 4.0*assign_('profC',_'course1') + 3.0*assign_('profC',_'course2') + 3.5*assign_('profC',_'course3') + 2.0*assign_('profC',_'course4') + 3.5*assign_('profC',_'course5') + 3.5*assign_('profD',_'course1') + 4.0*assign_('profD',_'course2') + 3.5*assign_('profD',_'course3') + 2.5*assign_('profD',_'course4') + 4.0*assign_('profD',_'course5') + 4.0*assign_('profE',_'course1') + 3.5*assign_('profE',_'course2') + 3.5*assign_('profE',_'course3') + 4.0*assign_('profE',_'course4') + 1.5*assign_('profE',_'course5')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prob.objective)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "06beca6a",
    "metadata": {},
    "outputs": [
@@ -463,7 +483,7 @@
        "11.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,12 +497,12 @@
    "id": "0860c62f",
    "metadata": {},
    "source": [
-    "I was a bit puzzled on the data structures. The `assign` object is a dictionary. Its _keys_ are passed when creating `assign`, in our case those come from `combos`. In `combos` we have two-tuples of strings like `('profA', 'course1')`. "
+    "I wanted to print the assignment, but I was a bit puzzled by the data structures. The `assign` object is a dictionary. Its _keys_ are the ones passed when creating `assign`, in our case that is `combos`. In `combos` we have two-tuples of strings like `('profA', 'course1')`. Indeed those are the keys of `assign`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "a3bc396e",
    "metadata": {},
    "outputs": [
@@ -528,7 +548,7 @@
    "id": "ec88de54",
    "metadata": {},
    "source": [
-    "So one of the keys of `assign` is `('profA', 'course1')` and we can extract the parts with `key[0]` (giving `'profA'`) and `key[1]` (giving `'course1'`). Here are all the keys."
+    "One of the keys of `assign` is `('profA', 'course1')` and we can extract the parts with `key[0]` (giving `'profA'`) and `key[1]` (giving `'course1'`). "
    ]
   },
   {
@@ -536,12 +556,12 @@
    "id": "b4d9eb24",
    "metadata": {},
    "source": [
-    "The keys of the `assign` object index _LP variables_. "
+    "When we have a key we can use that as in index into `assign`, and we get an LP variable, more precisely an object of type `pulp.pulp.LpVariable`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "52bdfe5c",
    "metadata": {},
    "outputs": [
@@ -551,7 +571,7 @@
        "pulp.pulp.LpVariable"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,12 +587,12 @@
    "id": "da6a538c",
    "metadata": {},
    "source": [
-    "An LP variable is object from the pulp package. It has 83 methods. "
+    "An LP variable is an object from the pulp package. It has 83 methods. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9d282328",
    "metadata": {},
    "outputs": [
@@ -582,7 +602,7 @@
        "83"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,13 +616,48 @@
    "id": "824368d9",
    "metadata": {},
    "source": [
-    "An LP variable can be printed, which means its `str` gets called to give some representation. In our case those strings are quite unreadable because they are formed from the key. We saw those names pop up in the file `LinAssign.lp`."
+    "An LP variable can be printed, which is coded as printing the variable's _name_. In our case the names are quite unreadable because they are based on the keys we passed. Here is an example of the name of a variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c2b67c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assign_('profA',_'course1')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb16d7e6",
+   "metadata": {},
+   "source": [
+    "We saw names like this pop up in the file `LinAssign.lp`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f535281",
+   "metadata": {},
+   "source": [
+    "Out of the 83 methods an LP variable has, two seem important method, `name()` and `value()`. \n",
+    "The former returns the above mentioned name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cf9dbaea",
    "metadata": {},
    "outputs": [
     {
@@ -611,26 +666,26 @@
        "\"assign_('profA',_'course1')\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(v)"
+    "v.name"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f535281",
+   "id": "d1dbf675",
    "metadata": {},
    "source": [
-    "But, an LP variable has an important method, `value()`, which returns the optimal value, at least, _after_ solving."
+    "The latter, `value()`, returns the optimal value, at least, _after_ solving."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "5e36fba7",
    "metadata": {},
    "outputs": [
@@ -640,7 +695,7 @@
        "1.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "3368ff4c",
    "metadata": {},
    "outputs": [
@@ -671,14 +726,18 @@
       "profB - course2 - 1.5\n",
       "profC - course4 - 2.0\n",
       "profD - course3 - 3.5\n",
-      "profE - course5 - 1.5\n"
+      "profE - course5 - 1.5\n",
+      "11.0\n"
      ]
     }
    ],
    "source": [
+    "cost = 0\n",
     "for key,var in assign.items():\n",
     "    if var.value() :\n",
-    "        print( f\"{key[0]} - {key[1]} - {costs[(key)]}\" )"
+    "        print( f\"{key[0]} - {key[1]} - {costs[key]}\" )\n",
+    "        cost += costs[key]\n",
+    "print(cost)"
    ]
   },
   {
